syntax = "proto3";

package pb;

option go_package = "github.com/nawarajshah/grpc-post-service/pb";

import "google/api/annotations.proto";
import "pb/post_request.proto";
import "pb/post_response.proto";

// PostService definition
service PostService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse) {
    option (google.api.http) = {
      post: "/api/posts"
      body: "post"
    };
  }
  
  rpc GetPost(GetPostRequest) returns (PostResponse) {
    option (google.api.http) = {
      get: "/api/posts/{postId}"
    };
  }
  
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse) {
    option (google.api.http) = {
      put: "/api/posts/{post.postId}"
      body: "post"
    };
  }
  
  rpc DeletePost(DeletePostRequest) returns (Empty) {
    option (google.api.http) = {
      delete: "/api/posts/{postId}"
    };
  }
}
